Fix a filter that used invalid YAML

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2246,10 +2246,11 @@ layers:
                     text_source: function() { if( feature.addr_housenumber ) { return feature.name + '\n' + feature.addr_housenumber; } else { return feature.name; } }
     address-labels:
         data: { source: osm, layer: buildings }
-        filter: 
-            all:
-                - { $zoom: { min: 20 }, kind: address }
-                - { $zoom: { min: 20 }, [ kind: true, addr_housenumber: true, name: false ] }
+        filter:
+            $zoom: { min: 20 }
+            any:
+                - kind: address
+                - { kind: true, addr_housenumber: true, name: false }
         draw:
             text:
                 interactive: true
