--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2023,13 +2023,17 @@ layers:
                     color: '#444'
                     width: [[14, 0.5px], [15, 1.0px], [16, 2m]]
             gondola_cable_car:
-                lines:
-                    color: black
-                    width: [[12, 2.0px], [13, 1.75px], [14, 2.25px], [15, 3.0px], [16, 4m]]
+                filter: { kind: [gondola, cable_car] }
+                draw:
+                    lines:
+                        color: black
+                        width: [[12, 2.0px], [13, 1.75px], [14, 2.25px], [15, 3.0px], [16, 4m]]
             chair_lift:
-                lines:
-                    color: '#333'
-                    width: [[13, 0.75px], [14, 1.5px], [15, 2.5px], [16, 3m]]
+                filter: { kind: chair_lift }
+                draw:
+                    lines:
+                        color: '#333'
+                        width: [[13, 0.75px], [14, 1.5px], [15, 2.5px], [16, 3m]]
             aerialway-labels:
                 filter: { $zoom: { min: 14 } }
                 draw:
@@ -4375,8 +4379,8 @@ layers:
                     draw:
                         text:
                             visible: false
-                    icons:
-                        size: [[13, 8px], [19, 18px]]
+                        icons:
+                            size: [[13, 8px], [19, 18px]]
 
             # examples of different icons mapped to feature properties
             icons:
