--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -3536,7 +3536,7 @@ layers:
                     #     - { $zoom: { min: 13 }, area: { min: 200000 } }
                     #     - { $zoom: { min: 14 }, area: { min: 50000 } }
                 national-park:
-                    filter: function() { return feature.name && feature.name.includes("National Park") }
+                    filter: function() { return feature.name && feature.name.indexOf("National Park") > -1 }
                     natl-park-labels-z7:
                         filter:
                             any:
@@ -3681,7 +3681,7 @@ layers:
                                 style: italic
                                 stroke: { color: [0.870,0.870,0.870], width: 2 }
                 wilderness-areas-early:
-                   filter: function() { return $zoom < 10 && feature.name && (feature.name.includes("Wilderness") || feature.name.includes("BLM")) }
+                   filter: function() { return $zoom < 10 && feature.name && (feature.name.indexOf("Wilderness") > -1 || feature.name.indexOf("BLM") > -1) }
                    draw:
                        text: { visible: false }
                        icons: { visible: false }
@@ -3691,7 +3691,7 @@ layers:
                         text: { visible: false }
                         icons: { visible: false }
                 not-national-park:
-                    filter: function() { return feature.name && feature.name.includes("Park") && !feature.name.includes("National Park")}
+                    filter: function() { return feature.name && feature.name.indexOf("Park") > -1 && !feature.name.indexOf("National Park") > -1}
                     # draw:
                     #     icons:
                     #         sprite: park
@@ -3701,7 +3701,7 @@ layers:
                             text: { visible: false }
                             icons: { visible: false }
                 forest:
-                    filter: function() { return $zoom < 8 && ((feature.name && feature.name.includes("Forest")) || feature.protect_class >=6) }
+                    filter: function() { return $zoom < 8 && ((feature.name && feature.name.indexOf("Forest") > -1) || feature.protect_class >=6) }
                     draw:
                         text: { visible: false }
                         icons: { visible: false }
@@ -4516,7 +4516,7 @@ layers:
                     dots2:
                         color: *green8
                 wilderness-areas:
-                    filter: function() { return feature.name && feature.name.includes("Wilderness") }
+                    filter: function() { return feature.name && feature.name.indexOf("Wilderness") > -1 }
                     draw:
                         dots2:
                             color: [0.027,0.804,0.494]
@@ -4559,7 +4559,7 @@ layers:
                     dots2:
                         color: *green6
                 wilderness-areas:
-                    filter: function() { return feature.name && feature.name.includes("Wilderness") }
+                    filter: function() { return feature.name && feature.name.indexOf("Wilderness") > -1 }
                     draw:
                         dots2:
                             color: *green7
