--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -3997,7 +3997,8 @@ layers:
                         - { $zoom: [14], area: { min: 50000 } }
                         - { $zoom: { min: 15 } }
                 national-park:
-                    filter: function() { return feature.name && feature.name.indexOf("National Park") > -1 }
+                    # yosemite national park, joshua tree national park
+                    filter: function() { return feature.name && feature.name.indexOf("National Park") > -1; }
                     draw:
                         icons:
                             visible: *icon_visible_landuse_green
@@ -4012,6 +4013,12 @@ layers:
                                 size: 13px
                                 style: italic
                                 stroke: { color: [0.870,0.870,0.870], width: 3px }
+                    natl-park-labels-z4-z6:
+                        filter: { $zoom: [4,5,6] }
+                        draw:
+                            icons:
+                                visible: false
+                            text: { font: { size: 9px, stroke: { width: 2px } } }
                     natl-park-labels-z7:
                         filter: { $zoom: [7] }
                         draw:
@@ -4046,63 +4053,72 @@ layers:
                         - { $zoom: [16],   area: { min: 1000 } }
                         - { $zoom: { min: 17 } }
                 visible: *label_visible_landuse_green
-                draw:
-                    icons:
-                        visible: *icon_visible_landuse_green
-                        sprite: forest
-                        interactive: true
-                    text:
-                        visible: *text_visible_landuse_green
-                        interactive: true
-                        offset: [0, 14px]
-                        font:
-                            fill: [0.200,0.409,0.398]
-                            size: 12px
-                            style: italic
-                            stroke: { color: [0.870,0.870,0.870], width: 2 }
-                green-areas-z7:
-                    filter: { $zoom: [5,6,7] }
-                    draw:
-                        text: { font: { size: 10px } }
-                green-areas-z8-z9:
-                    filter: { $zoom: { min: 8, max: 15 } }
-                    draw:
-                        text: { font: { size: 11px } }
-                wilderness-areas-early:
-                   filter: function() { return $zoom < 10 && feature.name && (feature.name.indexOf("Wilderness") > -1 || feature.name.indexOf("BLM") > -1) }
-                   draw:
-                       text: { visible: false }
-                       icons: { visible: false }
-                early-not-national-park:
-                    filter: { not: { kind: national_park }, $zoom: { max: 6 } }
-                    draw:
-                        text: { visible: false }
-                        icons: { visible: false }
                 not-national-park:
-                    filter: function() { return feature.name && feature.name.indexOf("Park") > -1 && !feature.name.indexOf("National Park") > -1}
-                    # draw:
-                    #     icons:
-                    #         sprite: park
-                    early:
-                        filter: { $zoom: { max: 8 } }
+                    filter: function() { return if( feature.name.indexOf("National Park") > -1 ) { return 0; } else { return 1;} }
+                    draw:
+                        icons:
+                            visible: *icon_visible_landuse_green
+                            sprite: park
+                            interactive: true
+                        text:
+                            visible: *text_visible_landuse_green
+                            interactive: true
+                            offset: [0, 14px]
+                            font:
+                                fill: [0.200,0.409,0.398]
+                                size: 12px
+                                style: italic
+                                stroke: { color: [0.870,0.870,0.870], width: 2 }
+                    green-areas-z6:
+                        # mojave national preserve
+                        filter: { $zoom: [6] }
+                        draw:
+                            icons: { visible: false }
+                            text: { font: { size: 9px, stroke: { width: 2px } } }
+                    green-areas-z7:
+                        filter: { $zoom: [7] }
+                        draw:
+                            icons: { visible: false }
+                            text: { font: { size: 10px } }
+                    green-areas-z8-z9:
+                        filter: { $zoom: { min: 8, max: 15 } }
+                        draw:
+                            text: { font: { size: 11px } }
+                    wilderness-areas-early:
+                       filter: function() { return $zoom < 10 && feature.name && (feature.name.indexOf("Wilderness") > -1 || feature.name.indexOf("BLM") > -1) }
+                       draw:
+                           text: { visible: false }
+                           icons: { visible: false }
+                    early-not-national-park:
+                        filter: { not: { kind: national_park }, $zoom: { max: 6 } }
                         draw:
                             text: { visible: false }
                             icons: { visible: false }
-                forest:
-                    filter: function() { return $zoom < 8 && ((feature.name && feature.name.indexOf("Forest") > -1) || feature.protect_class >=6) }
-                    draw:
-                        text: { visible: false }
-                        icons: { visible: false }
-                hide-till-later:
-                    filter: { kind: [grass], $zoom: { max: 16 } }
-                    draw:
-                        text: { visible: false }
-                        icons: { visible: false }
-                only-text-later:
-                    filter: { kind: [grass], $zoom: { min: 16 } }
-                    draw:
-                        text: { font: { style: italic } }
-                        icons: { visible: false }
+                    not-national-park:
+                        filter: function() { return feature.name && feature.name.indexOf("Park") > -1 }
+                        # draw:
+                        #     icons:
+                        #         sprite: park
+                        early:
+                            filter: { $zoom: { max: 8 } }
+                            draw:
+                                text: { visible: false }
+                                icons: { visible: false }
+                    forest:
+                        filter: function() { return $zoom < 8 && ((feature.name && feature.name.indexOf("Forest") > -1) || feature.protect_class >=6) }
+                        draw:
+                            text: { visible: false }
+                            icons: { visible: false }
+                    hide-till-later:
+                        filter: { kind: [grass], $zoom: { max: 16 } }
+                        draw:
+                            text: { visible: false }
+                            icons: { visible: false }
+                    only-text-later:
+                        filter: { kind: [grass], $zoom: { min: 16 } }
+                        draw:
+                            text: { font: { style: italic } }
+                            icons: { visible: false }
             airport:
                 filter:
                     all:
