--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -4799,12 +4799,17 @@ layers:
             draw:
                 text:
                     font:
-                        fill: [0.318,0.588,0.725] #*text_fill_water
+                        fill: [0.102,0.533,0.612] #*text_fill_water
                         family: Helvetica
                         style: italic
                         weight: 500
                         size: 12px
                         # stroke: { color: [0.878,0.929,0.980], width: 2 }
+        lakes-z5:
+            filter: { $zoom: [5] }
+            draw:
+                text: { font: { size: 9px } }
+
     ocean-sea-labels:
         data: { source: osm, layer: places }
         visible: *text_visible_water_labels
@@ -4812,15 +4817,32 @@ layers:
         draw:
             text:
                 font:
-                    fill: [0.364,0.607,0.650] #*text_fill_water
+                    fill: [0.102,0.533,0.612] #*text_fill_water
                     family: Helvetica
-                    style: italic
                     weight: 500
                     size: 12px
-                    stroke: { color: [0.878,0.929,0.980], width: 3 }
+                    transform: uppercase
+                    # stroke: { color: [0.051,0.455,0.525], width: 3 }
         sea-early:
-            filter: { $zoom: { max: 4 }, kind: sea }
+            filter: { $zoom: [3], kind: sea }
             draw: { text: { visible: false } }
+        ocean-sea-labels-z4:
+            filter: { $zoom: [4] }
+            draw:
+                text: { font: { size: 16px }, transform: uppercase }
+            sea-labels-z4:
+                filter: { not: { kind: [ocean] } }
+                draw:
+                    text: { font: { size: 8px } }
+        ocean-sea-labels-z5:
+            filter: { $zoom: [5] }
+            draw:
+                text: { font: { size: 16px } }
+            sea-labels-z4:
+                filter: { not: { kind: [ocean] } }
+                draw:
+                    text: { font: { size: 9px } }
+
     playa-labels:
         data: { source: osm, layer: [water] }
         visible: *text_visible_water_labels
