fixes #61 for rail road sorting, and other sorting

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -948,7 +948,7 @@ layers:
         draw:
             lines:
                 interactive: true
-                order: function() { return (6 + feature.sort_key) | 6; }
+                order: function() { return (6 + feature.sort_key) || 6; }
         railway:
             filter: { kind: railway }
             draw:
@@ -988,7 +988,7 @@ layers:
             draw:
                 lines:
                     # let roads sort themselves past zoom 14
-                    order: function() { return 6 + feature.sort_key; }
+                    order: function() { return (6 + feature.sort_key) || 6; }
                     # but give them all the same outline
                     outline:
                         order: 21 # 15 is the starting aboveground level, plus 6
@@ -999,7 +999,7 @@ layers:
                     lines:
                         outline:
                             # except bridges and tunnels, their outlines should also self-sort
-                            order: function() { return 6 + feature.sort_key; }
+                            order: function() { return (6 + feature.sort_key) || 6; }
 
     roads:
         data: { source: osm, layer: roads }
@@ -1067,10 +1067,10 @@ layers:
                 filter: { not: { is_link: yes }, $zoom: {max: 15} }
                 draw:
                     lines:
-                        order: function() { return 7 + feature.sort_key; }
+                        order: function() { return (7 + feature.sort_key) || 7; }
                         outline:
                             # except bridges and tunnels, their outlines should also self-sort
-                            order: function() { return 7 + feature.sort_key; }
+                            order: function() { return (7 + feature.sort_key) || 7; }
             link:
                 filter: { is_link: yes } # on- and off-ramps, etc
                 draw:
@@ -1086,7 +1086,7 @@ layers:
                     draw:
                         lines:
                             # except bridges and tunnels, their outlines should also self-sort
-                            order: function() { return 7 + feature.sort_key; }
+                            order: function() { return (7 + feature.sort_key) || 7; }
                 tunnel-link:
                     filter: {is_tunnel: yes, $zoom: {min: 13} }
                     draw:
@@ -1251,7 +1251,7 @@ layers:
                         draw:
                             lines:
                                 # let roads sort themselves past zoom 14
-                                order: function() { return 8 + feature.sort_key; }
+                                order: function() { return (8 + feature.sort_key) || 8; }
                                 # but give them all the same outline
                                 outline:
                                     order: 23 # 15 is the starting aboveground level, plus 8
@@ -2047,7 +2047,7 @@ layers:
             draw:
                 lines:
                     # let roads sort themselves past zoom 14
-                    order: function() { return 6 + feature.sort_key; }
+                    order: function() { return (6 + feature.sort_key) || 6; }
                     # but give them all the same outline
                     outline:
                         order: 21 # 15 is the starting aboveground level, plus 6
@@ -2058,7 +2058,7 @@ layers:
                     lines:
                         outline:
                             # except bridges and tunnels, their outlines should also self-sort
-                            order: function() { return 6 + feature.sort_key; }
+                            order: function() { return (6 + feature.sort_key) || 6; }
 
     city_walls:
         data: { source: osm, layer: boundaries }
@@ -5084,7 +5084,7 @@ layers:
                 draw:
                     dots2:
                         color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]],[9,[0.242,0.737,0.712]],[14,[0.224,0.682,0.659]]]
-                        order: function() { return feature.sort_key + 1 || 1; }
+                        order: function() { return feature.sort_key + 1 | 1; }
                         visible: true
 
             urban:
@@ -5128,7 +5128,7 @@ layers:
                 draw:
                     dots2:
                         color: *brown1
-                        order: function() { return feature.sort_key - 2 || 1; }
+                        order: function() { return (feature.sort_key - 2) | 1; }
                         visible: true
         tier4:
             filter: 
