--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -914,28 +914,35 @@ layers:
             draw:
                 water_border:
                     order: 10
-                    color: [0.886,0.937,0.988]
+                    color: [[0,[0.886,0.937,0.988]]]
                     width: 20px
         water_boundaries-not-ocean:
-            filter: { boundary: yes, not: { kind: ocean }, $zoom: { min: 9 } }
+            filter: { boundary: yes, not: { kind: ocean }, $zoom: { min: 8 } }
             draw:
-                line3:
+                double-border-light:
                     style: lines
                     order: 5
-                    width: [[9,0px],[10,2px],[12,3px],[14,3px],[16,4px],[18,6.0px]]
                     color: [0.886,0.937,0.988]
+                    width: [[9,0px],[10,2px],[11,1.5px],[12,2px],[14,4px],[16,4px],[18,6.0px]]
                 lines:
                     order: 5
-                    color: [0.396,0.833,0.920]
-                    width: [[9,0.25px],[10,0.5px],[12,0.75px],[14,1.0px],[16,1.0px],[18,1.1px]]
+                    color: [0.543,0.740,0.780]
+                    width: [[8,1px],[10,1px],[11,0.5px],[12,1px],[13,1.25px],[14,1.5px],[15,1.5px],[16,2px],[17,2.25px],[18,3px]]
                     join: round
+            riverbank:
+                filter: { kind: riverbank }
+                draw:
+                    lines:
+                        color: [0.397,0.743,0.809]
+                        width: [[9,0.75px],[10,1px],[11,1.25px],[12,1.5px],[13,2px],[14,2px],[15,2.5px],[16,3px],[18,3.25px]]
         river:
-            filter: { kind: [river,canal,stream,dam,ditch,drain], $zoom: { min: 12 } }
+            #river center lines, not boundaries for polygons
+            filter: { kind: [river,canal,stream,dam,ditch,drain], $zoom: { min: 11 } }
             draw:
                 lines:
                     order: 3
-                    color: [[12,[0.396,0.833,0.920]], [13,[0.725,0.902,0.965]]]
-                    width: [[12,0.5px],[13,2px],[14,2.0px],[16,2.25px],[18,4m]]
+                    color: [0.397,0.743,0.809]
+                    width: [[11,0.75px],[12,0.75px],[13,1px],[14,1.25px],[16,1.5px]]
                     join: round
 
     subway-light-rail:
@@ -4942,12 +4949,19 @@ layers:
         draw:
             text:
                 font:
-                    fill: *text_fill_water
+                    fill: [0.314,0.591,0.640]
                     family: Helvetica
                     style: italic
                     weight: 500
                     size: 12px
-                    stroke: { color: *text_stroke_water, width: 3 }
+        water-line-labels-z14:
+            filter: { $zoom: [14] }
+            draw:
+                text: { font: { size: 10px } } 
+        water-line-labels-z17:
+            filter: { $zoom: [17] }
+            draw:
+                text: { font: { size: 14px } }
         not-river-not-stream:
             filter: { kind: [canal,dam,ditch,drain], $zoom: { max: 16 } }
             draw:
