--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -907,8 +907,8 @@ layers:
                     color: [[9,[0.396,0.833,0.920]],[10,[0.886,0.937,0.988]]]
                 lines:
                     order: 10
+                    color: [0.543,0.740,0.780]
                     width: [[1,0.25px],[6,0.5px],[7,0.75px],[9,0.75px],[10,1px]]
-                    color: [0.396,0.833,0.920]
         water-boundary-ocean-late:
             filter: { boundary: yes, kind: ocean, $zoom: {min: 17} }
             draw:
@@ -917,24 +917,25 @@ layers:
                     color: [[0,[0.886,0.937,0.988]]]
                     width: 20px
         water_boundaries-not-ocean:
-            filter: { boundary: yes, not: { kind: ocean }, $zoom: { min: 8 } }
+            filter: { boundary: yes, not: { kind: ocean }, $zoom: { min: 8, max: 18 } }
             draw:
                 double-border-light:
                     style: lines
-                    order: 5
+                    order: 30
                     color: [0.886,0.937,0.988]
-                    width: [[9,0px],[10,2px],[11,1.5px],[12,2px],[14,4px],[16,4px],[18,6.0px]]
+                    width: [[9,0px],[10,2px],[11,1.5px],[12,3px],[13,3.5px],[14,4px],[15,4px],[16,4px],[18,8px]]
                 lines:
-                    order: 5
-                    color: [0.543,0.740,0.780]
-                    width: [[8,1px],[10,1px],[11,0.5px],[12,1px],[13,1.25px],[14,1.5px],[15,1.5px],[16,2px],[17,2.25px],[18,3px]]
+                    order: 30
+                    color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.569,0.722,0.749]],[15,[0.397,0.743,0.809]]]
+                    width: [[8,0.5px],[10,0.5px],[11,0.5px],[12,0.75px],[13,1px],[14,1px],[15,1px],[16,1px],[17,1.5px],[18,3px]]
                     join: round
             riverbank:
+                # river boundaries like the thames in london, la seine in paris
                 filter: { kind: riverbank }
                 draw:
                     lines:
                         color: [0.397,0.743,0.809]
-                        width: [[9,0.75px],[10,1px],[11,1.25px],[12,1.5px],[13,2px],[14,2px],[15,2.5px],[16,3px],[18,3.25px]]
+                        width: [[9,0.5px],[10,0.75px],[11,0.75px],[12,0.8px],[13,1px],[14,1px],[15,1px],[16,1px],[17,1.5px]]
         river:
             #river center lines, not boundaries for polygons
             filter: { kind: [river,canal,stream,dam,ditch,drain], $zoom: { min: 11 } }
@@ -942,7 +943,7 @@ layers:
                 lines:
                     order: 3
                     color: [0.397,0.743,0.809]
-                    width: [[11,0.75px],[12,0.75px],[13,1px],[14,1.25px],[16,1.5px]]
+                    width: [[11,0.3px],[12,0.5px],[13,0.75px],[14,1px],[16,1.25px]]
                     join: round
 
     subway-light-rail:
