colored landuse nature reserve

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -5084,7 +5084,7 @@ layers:
                 filter: { kind: nature_reserve, $zoom: { min: 7 } }
                 draw:
                     dots2:
-                        color: *green6
+                        color: [0.425,0.680,0.367]
                         visible: true
                 wilderness-areas:
                     filter: function() { return feature.name && feature.name.indexOf("Wilderness") > -1 }
